[gd_scene load_steps=6 format=3 uid="uid://m05sredssy8n"]

[ext_resource type="Script" path="res://Main.gd" id="1_0cabb"]
[ext_resource type="Script" path="res://pivot_point.gd" id="1_c6sk7"]
[ext_resource type="Script" path="res://camera_3d.gd" id="1_e53pn"]

[sub_resource type="BoxMesh" id="BoxMesh_y13te"]

[sub_resource type="BoxMesh" id="BoxMesh_r5dox"]
size = Vector3(1, 10, 5)

[node name="Main" type="Node3D"]
script = ExtResource("1_0cabb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.701904, 0.544817, 0.458809, -0.645966, -0.215511, -0.732314, -0.300099, -0.810389, 0.503201, -146.273, 96.8194, 0)

[node name="Camera3D" type="Camera3D" parent="DirectionalLight3D"]
transform = Transform3D(-0.701904, -0.645966, -0.300099, 0.544817, -0.215511, -0.810389, 0.458809, -0.732314, 0.503201, -212.956, 115.168, 58.4712)
fov = 35.0
script = ExtResource("1_e53pn")

[node name="PivotPoint" type="Node3D" parent="."]
script = ExtResource("1_c6sk7")
rod_length_1 = null
rod_length_2 = null
mass_1 = null
mass_2 = null
gravity = null
damping = null
initial_angle_1 = null
initial_angle_2 = null
initial_velocity_1 = null
initial_velocity_2 = null
debug_mode = null
pause_simulation = null

[node name="FirstArm" type="Node3D" parent="PivotPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 108.51, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PivotPoint/FirstArm"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 4.45933, 15.8348)
mesh = SubResource("BoxMesh_y13te")

[node name="SecondArm" type="Node3D" parent="PivotPoint/FirstArm"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="PivotPoint/FirstArm/SecondArm"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -12.2261, 15.8348)
mesh = SubResource("BoxMesh_r5dox")
